welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:25: error: not found: value color
    faireV(color.YELLOW)
           ^MethodsPicture:26: error: not found: value color
    faireV(color.RED)
           ^MethodsPicture:27: error: not found: value color
    faireV(color.BLUE)
           ^MethodsPicture:28: error: not found: value color
    faireV(color.GREEN)
           ^