welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
  
  def marquerSol(c:Color){
    setCouleurBrosse(c)
    baisseBrosse()
    leveBrosse()
  }
  
  def faireV(c:Color){
    avance(2)
    marquerSol(c)
    avance()
    gauche()
    avance()
    marquerSol(c)
    recule()
    droite()
    avance()
    marquerSol(c)
    avance(2)
    gauche()
  }
  
  def faireMotif(){
    faireV(color.YELLOW)
    faireV(color.RED)
    faireV(color.BLUE)
    faireV(color.GREEN)
  }
  
  
  def faireLigne(){
    var nbMotif:Int=0
    for (nbMotif<-1 to 3){
      faireMotif()
      avance(7)
    }
  }
	
 
  var nbLigne:Int=0
  for (nbLigne<-1 to 3){
    faireLigne()
    gauche()
    avance(7)
    droite() 
  }
}